minor fixes to stylesheet: Booking item spacing fix. Small screens spacing fix.

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,4 +1,3 @@
-
 /* FONT IMPORT  */
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display+SC:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap');
@@ -82,7 +81,7 @@ section#main-buttons {
     margin-left: 5px;
 }
 
-#sb_main #main #sb_content #steps-content .item .cap.short {
+#sb_main #main #sb_content #steps-content .item .cap.short, #sb-timeline #steps #steps-content #sb_booking_content .provider-item .name {
     height: auto;
     border-bottom-style: solid;
     padding: 0 0 10px;
@@ -121,6 +120,16 @@ section#main-buttons {
 .content .bar-service {
     float:left;
     width:100%;
+}
+
+@media screen and (max-width:767px) {
+    #sb_main #main #sb_content #steps-content .item {
+        margin-bottom: 2.5em;
+    }
+
+    #sb-timeline #steps #steps-content #sb_booking_content .datetime-step #sb_timeview_container .timeline-wrapper #sb_time_slots_container .slot {
+        width: 31% !important;
+    }
 }
 
 
